--- a/course.html
+++ b/course.html
@@ -30,8 +30,10 @@
     <div class="container-fluid d-none d-lg-block">
         <div class="row align-items-center py-4 px-xl-5">
             <div class="col-lg-3">
-                <a href="" class="text-decoration-none">
-                    <h1 class="m-0"><img src="img/sticky-logo.png" alt="logo"></h1>
+                <a href="index.html" class="text-decoration-none">
+                    <h1 class="m-0"><img src="img/resources/logo - Copy.png" style="width: 285px;
+                        margin-left: 42px;
+                        height: 160px;" alt="logo"></h1>
                 </a>
             </div>
             <div class="col-lg-3 text-right">
