--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
         <div class="row align-items-center py-2 px-xl-5">
             <div class="col-lg-3">
                 <a href="index.html" class="text-decoration-none">
-                    <h1 class="m-0"><img src="img/resources/logo - Copy.png" style="width: 100px;
-                        margin-left: 100px;" alt="logo"></h1>
+                    <h1 class="m-0"><img src="img/resources/logo - Copy.png" style="width: 285px;
+                        margin-left: 42px;
+                        height: 160px;" alt="logo"></h1>
                 </a>
             </div>
             <div class="col-lg-3 text-right">
@@ -151,7 +152,7 @@
                                         <div
                                             class="dropdown-item position-relative bg-secondary border-0 rounded-0 w-100 m-0">
                                             <a href="thailand.html" class="dropdown-item">Thailand</a>
-                                            <a href="singapore.html" class="dropdown-item">Singapoor</a>
+                                            <a href="singapore.html" class="dropdown-item">singapore</a>
                                         </div>
                                     </div>
                                 </div>
@@ -479,16 +480,7 @@
                         24/7 via chat and tickets; phone support is available as well.
 
                     </p>
-                    <ul class="list-inline text-white m-0">
-                        <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Clear, concise description of the
-                            company’s mission.
-                        </li>
-                        <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Easy-to-navigate contact form.
-                        </li>
-                        <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Selection of appropriate
-                            categories for inquiries.
-                        </li>
-                    </ul>
+ 
                 </div>
                 <div class="col-lg-5">
                     <div class="card border-0">
@@ -710,11 +702,14 @@
                     <div class="col-md-6 mb-5">
                         <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Our Services</h5>
                         <div class="d-flex flex-column justify-content-start">
-                            <a class="text-white mb-2" href="education.html"><i class="fa fa-angle-right mr-2"></i>Education</a>
-                            <a class="text-white mb-2" href="visit-visa.html"><i class="fa fa-angle-right mr-2"></i>Visas</a>
+                            <a class="text-white mb-2" href="education.html"><i
+                                    class="fa fa-angle-right mr-2"></i>Education</a>
+                            <a class="text-white mb-2" href="visit-visa.html"><i
+                                    class="fa fa-angle-right mr-2"></i>Visas</a>
                             <a class="text-white mb-2" href="tours.html"><i class="fa fa-angle-right mr-2"></i>Tours &
                                 Travells</a>
-                            <a class="text-white mb-2" href="trading.html"><i class="fa fa-angle-right mr-2"></i>Stock Market</a>
+                            <a class="text-white mb-2" href="trading.html"><i class="fa fa-angle-right mr-2"></i>Stock
+                                Market</a>
                             <!-- <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>SEO</a> -->
                         </div>
                     </div>
