--- a/study-in-uk.html
+++ b/study-in-uk.html
@@ -30,8 +30,10 @@
     <div class="container-fluid d-none d-lg-block">
         <div class="row align-items-center py-4 px-xl-5">
             <div class="col-lg-3">
-                <a href="" class="text-decoration-none">
-                    <h1 class="m-0"><img src="img/sticky-logo.png" alt="logo"></h1>
+                <a href="index.html" class="text-decoration-none">
+                    <h1 class="m-0"><img src="img/resources/logo - Copy.png" style="width: 285px;
+                        margin-left: 42px;
+                        height: 160px;" alt="logo"></h1>
                 </a>
             </div>
             <div class="col-lg-3 text-right">
@@ -285,18 +287,7 @@
                         </a>
                     </div> -->
 
-                    <!-- Tag Cloud -->
-                    <!-- <div class="mb-5">
-                        <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Tag Cloud</h3>
-                        <div class="d-flex flex-wrap m-n1">
-                            <a href="" class="btn btn-outline-primary m-1">Design</a>
-                            <a href="" class="btn btn-outline-primary m-1">Development</a>
-                            <a href="" class="btn btn-outline-primary m-1">Marketing</a>
-                            <a href="" class="btn btn-outline-primary m-1">SEO</a>
-                            <a href="" class="btn btn-outline-primary m-1">Writing</a>
-                            <a href="" class="btn btn-outline-primary m-1">Consulting</a>
-                        </div>
-                    </div> -->
+
                     <!-- Comment Form -->
                     <div class="bg-secondary rounded p-4">
                         <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Leave a comment</h3>
@@ -863,8 +854,8 @@
         style="border-color: rgba(256, 256, 256, .1) !important;">
         <div class="row">
             <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white">&copy; <a class="text-primary" href="#">Hykin Overseas</a>. All Rights Reserved. Designed by <a
-                        href="https://htmlcodex.com">2023</a>
+                <p class="m-0 text-white">&copy; <a class="text-primary" href="#">Hykin Overseas</a>. All Rights
+                    Reserved. Designed by <a href="https://htmlcodex.com">2023</a>
                 </p>
             </div>
             <div class="col-lg-6 text-center text-md-right">
