--- a/study.html
+++ b/study.html
@@ -30,8 +30,10 @@
     <div class="container-fluid d-none d-lg-block">
         <div class="row align-items-center py-4 px-xl-5">
             <div class="col-lg-3">
-                <a href="" class="text-decoration-none">
-                    <h1 class="m-0"><img src="img/sticky-logo.png" alt="logo" /></h1>
+                <a href="index.html" class="text-decoration-none">
+                    <h1 class="m-0"><img src="img/resources/logo - Copy.png" style="width: 285px;
+                        margin-left: 42px;
+                        height: 160px;" alt="logo"></h1>
                 </a>
             </div>
             <div class="col-lg-3 text-right">
@@ -276,42 +278,42 @@
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="study-in-usa.html" class="text-decoration-none h6 m-0 active">Study In USA</a>
-                                <span class="badge badge-primary badge-pill"></span>
+                                <span><img src="img/country flags/usa.jpg" alt=""></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="study-in-uk.html" class="text-decoration-none h6 m-0 active">Study In UK</a>
-                                <span class="badge badge-primary badge-pill"></span>
+                                <span><img src="img/country flags/uk.jpg" alt=""></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="study-in-canada.html" class="text-decoration-none h6 m-0 active">Study In
                                     Canada</a>
-                                <span class="badge badge-primary badge-pill"></span>
+                                <span><img src="img/country flags/canada.jpg" alt=""></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="study-in-australia.html" class="text-decoration-none h6 m-0 active">Study In
                                     Australia</a>
-                                <span class="badge badge-primary badge-pill"></span>
+                                <span><img src="img/country flags/australia.jpg" alt=""></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="study-in-singapore.html" class="text-decoration-none h6 m-0 active">Study In
                                     Singapore</a>
-                                <span class="badge badge-primary badge-pill"></span>
+                                <span><img src="img/country flags/singapore.jpg" alt=""></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="study-in-cyprus.html" class="text-decoration-none h6 m-0">Study in Cyprus</a>
-                                <span class="badge badge-primary badge-pill"></span>
+                                <span><img src="img/country flags/cyprus.jpg" alt=""></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="study-in-france.html" class="text-decoration-none h6 m-0">Study in France</a>
-                                <span class="badge badge-primary badge-pill"></span>
+                                <span><img src="img/country flags/france.jpg" alt=""></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="study-in-ireland.html" class="text-decoration-none h6 m-0">Study in Ireland</a>
-                                <span class="badge badge-primary badge-pill"></span>
+                                <span><img src="img/country flags/ireland.jpg" alt=""></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="404.html" class="text-decoration-none h6 m-0">Study in Other Schengen</a>
-                                <span class="badge badge-primary badge-pill"></span>
+                                <span><img src="img/country flags/" alt=""></span>
                             </li>
                         </ul>
                     </div>
@@ -564,11 +566,14 @@
                             Our Courses
                         </h5>
                         <div class="d-flex flex-column justify-content-start">
-                            <a class="text-white mb-2" href="education.html"><i class="fa fa-angle-right mr-2"></i>Education</a>
-                            <a class="text-white mb-2" href="visit-visa.html"><i class="fa fa-angle-right mr-2"></i>Visas</a>
+                            <a class="text-white mb-2" href="education.html"><i
+                                    class="fa fa-angle-right mr-2"></i>Education</a>
+                            <a class="text-white mb-2" href="visit-visa.html"><i
+                                    class="fa fa-angle-right mr-2"></i>Visas</a>
                             <a class="text-white mb-2" href="tours.html"><i class="fa fa-angle-right mr-2"></i>Tours &
                                 Travells</a>
-                            <a class="text-white mb-2" href="trading.html"><i class="fa fa-angle-right mr-2"></i>Stock Market</a>
+                            <a class="text-white mb-2" href="trading.html"><i class="fa fa-angle-right mr-2"></i>Stock
+                                Market</a>
                             <!-- <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>SEO</a> -->
                         </div>
                     </div>
