--- a/business-visa.html
+++ b/business-visa.html
@@ -203,17 +203,14 @@
                 <div class="col-lg-8">
                     <div class="mb-5">
                         <!-- <h6 class="text-primary mb-3">Jan 01, 2050</h6> -->
-                        <h1 class="mb-5">Studying abroad is always the best way to discover yourself.</h1>
+                        <h1 class="mb-5">The best way to predict the future is to create it.</h1>
                         <img class="img-fluid rounded w-100 mb-4" src="img/b-visa.jpg" alt="Image">
-                        <p>Studying abroad can be a life-changing experience. It offers the opportunity to immerse
-                            oneself in a new culture, learn a new language, and gain a unique perspective on the world.
-                            Additionally, studying abroad can enhance one's academic and professional prospects by
-                            providing access to top-notch educational institutions and networking opportunities.
-                            However, it is important to carefully research and plan for a study abroad experience to
-                            ensure a successful and safe journey. Factors to consider include the destination country's
-                            culture, language, safety, and visa requirements, as well as the academic program and cost.
-                            With proper preparation and an open mind, studying abroad can be an incredibly rewarding
-                            adventure that broadens one's horizons and enriches one's life.</p>
+                        <p>A business visa is a type of visa that allows individuals to travel to a foreign country for
+                            business-related purposes. The specific requirements and privileges associated with a
+                            business visa can vary depending on the country and its immigration policies. Generally,
+                            business visas are granted to individuals who intend to engage in activities such as
+                            attending business meetings, conferences, negotiations, or exploring potential business
+                            opportunities.</p>
                         <h2 class="mb-4">What Is a Business Visa?</h2>
                         <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/business.jpg" alt="Image">
                         <p>A business visa is an essential travel authorization issued by national governments.
@@ -433,18 +430,18 @@
                                         <div class="team-social">
                                             <a class="btn btn-outline-light mx-1" href="stock-market.html"
                                                 role="button">More Details</a> -->
-                                            <!-- <button class=" btn btn-outline-light mx-1">More Details</button> -->
-                                            <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                    <!-- <button class=" btn btn-outline-light mx-1">More Details</button> -->
+                    <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-linkedin-in"></i></a> -->
-                                        <!-- </div>
+                    <!-- </div>
                                     </div>
                                     <div class="bg-secondary p-4">
                                         <h5 class="m-0">Stock Market</h5> -->
-                                        <!-- <p class="m-0">Stock Market</p>
+                    <!-- <p class="m-0">Stock Market</p>
                                     </div>
                                 </div>
                             </div>
@@ -455,22 +452,22 @@
                                         <div class="team-social">
                                             <a class="btn btn-outline-light mx-1" href="software-training.html"
                                                 role="button">More Details</a> -->
-                                            <!-- <button class="btn btn-outline-light mx-1"></button> -->
-                                            <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                    <!-- <button class="btn btn-outline-light mx-1"></button> -->
+                    <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-linkedin-in"></i></a> -->
-                                        <!-- </div>
+                    <!-- </div>
                                     </div>
                                     <div class="bg-secondary p-4">
                                         <h5 class="m-0">Software Training</h5> -->
-                                        <!-- <p class="m-0">Software Training</p> -->
-                                    <!-- </div>
+                    <!-- <p class="m-0">Software Training</p> -->
+                    <!-- </div>
                                 </div>
                             </div> -->
-                            <!-- <div class="col-md-6 col-lg-3 text-center team mb-4">
+                    <!-- <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
                                         <img class="img-fluid" src="img/team/team-3.jpg" alt="">
@@ -489,7 +486,7 @@
                                     </div>
                                 </div>
                             </div> -->
-                            <!-- <div class="col-md-6 col-lg-3 text-center team mb-4">
+                    <!-- <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
                                         <img class="img-fluid" src="img/team/team-4.jpg" alt="">
@@ -508,12 +505,12 @@
                                     </div>
                                 </div>
                             </div> -->
-                        </div>
-                    </div>
                 </div>
-                <!-- Team End -->
             </div>
         </div>
+        <!-- Team End -->
+    </div>
+    </div>
     </div>
     <!-- Detail End -->
 
@@ -532,24 +529,27 @@
                         <p><i class="fa fa-envelope mr-2"></i>hykinoverseas@gmail.com</p>
                         <div class="d-flex justify-content-start mt-4">
                             <a class="btn btn-outline-light btn-facebook btn-square mr-2"
-                            href="https://www.facebook.com/profile.php?id=61550644413617"><i
-                                class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-youtube btn-square mr-2"
-                            href="https://www.youtube.com/@HykinOverseas"><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-instagram btn-square mr-2" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
+                                href="https://www.facebook.com/profile.php?id=61550644413617"><i
+                                    class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-youtube btn-square mr-2"
+                                href="https://www.youtube.com/@HykinOverseas"><i class="fab fa-youtube"></i></a>
+                            <a class="btn btn-outline-light btn-instagram btn-square mr-2" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
                         "><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-outline-light btn-whatsapp btn-square"
+                            <a class="btn btn-outline-light btn-whatsapp btn-square"
                                 href="https://wa.me/message/HYXBIBJVXC3RP1"><i class="fab fa-whatsapp"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 mb-5">
                         <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Our Courses</h5>
                         <div class="d-flex flex-column justify-content-start">
-                            <a class="text-white mb-2" href="education.html"><i class="fa fa-angle-right mr-2"></i>Education</a>
-                            <a class="text-white mb-2" href="visit-visa.html"><i class="fa fa-angle-right mr-2"></i>Visas</a>
+                            <a class="text-white mb-2" href="education.html"><i
+                                    class="fa fa-angle-right mr-2"></i>Education</a>
+                            <a class="text-white mb-2" href="visit-visa.html"><i
+                                    class="fa fa-angle-right mr-2"></i>Visas</a>
                             <a class="text-white mb-2" href="tours.html"><i class="fa fa-angle-right mr-2"></i>Tours &
                                 Travells</a>
-                            <a class="text-white mb-2" href="trading.html"><i class="fa fa-angle-right mr-2"></i>Stock Market</a>
+                            <a class="text-white mb-2" href="trading.html"><i class="fa fa-angle-right mr-2"></i>Stock
+                                Market</a>
                             <!-- <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>SEO</a> -->
                         </div>
                     </div>
@@ -576,8 +576,8 @@
         style="border-color: rgba(256, 256, 256, .1) !important;">
         <div class="row">
             <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white">&copy; <a class="text-primary" href="#">Hykin Overseas</a>. All Rights Reserved. Designed by <a
-                        href="https://htmlcodex.com">2023</a>
+                <p class="m-0 text-white">&copy; <a class="text-primary" href="#">Hykin Overseas</a>. All Rights
+                    Reserved. Designed by <a href="https://htmlcodex.com">2023</a>
                 </p>
             </div>
             <div class="col-lg-6 text-center text-md-right">
