--- a/visit-visa.html
+++ b/visit-visa.html
@@ -203,17 +203,12 @@
                 <div class="col-lg-8">
                     <div class="mb-5">
                         <!-- <h6 class="text-primary mb-3">Jan 01, 2050</h6> -->
-                        <h1 class="mb-5">Studying abroad is always the best way to discover yourself.</h1>
+                        <h1 class="mb-5">Life is short, and the world is wide.</h1>
                         <img class="img-fluid rounded w-100 mb-4" src="img/tourst-visa.jpg" alt="Image">
-                        <p>Studying abroad can be a life-changing experience. It offers the opportunity to immerse
-                            oneself in a new culture, learn a new language, and gain a unique perspective on the world.
-                            Additionally, studying abroad can enhance one's academic and professional prospects by
-                            providing access to top-notch educational institutions and networking opportunities.
-                            However, it is important to carefully research and plan for a study abroad experience to
-                            ensure a successful and safe journey. Factors to consider include the destination country's
-                            culture, language, safety, and visa requirements, as well as the academic program and cost.
-                            With proper preparation and an open mind, studying abroad can be an incredibly rewarding
-                            adventure that broadens one's horizons and enriches one's life.</p>
+                        <p>A travel visa is a document which is issued by the government, providing an individual
+                            permission to stay in that country for a specific period of time. This official document is
+                            a testament to the fact that the person can officially be in the country, and is not
+                            entering the country illegally.</p>
                         <h2 class="mb-4">What Is a Tourist Visa?</h2>
                         <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/tourist.jpg" alt="Image">
                         <p>A tourist visa is the most common type of travel permit. Passengers visiting another country
@@ -533,11 +528,14 @@
                     <div class="col-md-6 mb-5">
                         <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Our Courses</h5>
                         <div class="d-flex flex-column justify-content-start">
-                            <a class="text-white mb-2" href="education.html"><i class="fa fa-angle-right mr-2"></i>Education</a>
-                            <a class="text-white mb-2" href="visit-visa.html"><i class="fa fa-angle-right mr-2"></i>Visas</a>
+                            <a class="text-white mb-2" href="education.html"><i
+                                    class="fa fa-angle-right mr-2"></i>Education</a>
+                            <a class="text-white mb-2" href="visit-visa.html"><i
+                                    class="fa fa-angle-right mr-2"></i>Visas</a>
                             <a class="text-white mb-2" href="tours.html"><i class="fa fa-angle-right mr-2"></i>Tours &
                                 Travells</a>
-                            <a class="text-white mb-2" href="trading.html"><i class="fa fa-angle-right mr-2"></i>Stock Market</a>
+                            <a class="text-white mb-2" href="trading.html"><i class="fa fa-angle-right mr-2"></i>Stock
+                                Market</a>
                             <!-- <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>SEO</a> -->
                         </div>
                     </div>
