--- a/work-visa.html
+++ b/work-visa.html
@@ -203,17 +203,13 @@
                 <div class="col-lg-8">
                     <div class="mb-5">
                         <!-- <h6 class="text-primary mb-3">Jan 01, 2050</h6> -->
-                        <h1 class="mb-5">Studying abroad is always the best way to discover yourself.</h1>
+                        <h1 class="mb-5">Work hard in silence, let your success be the noise.</h1>
                         <img class="img-fluid rounded w-100 mb-4" src="img/w-visa.jpg" alt="Image">
-                        <p>Studying abroad can be a life-changing experience. It offers the opportunity to immerse
-                            oneself in a new culture, learn a new language, and gain a unique perspective on the world.
-                            Additionally, studying abroad can enhance one's academic and professional prospects by
-                            providing access to top-notch educational institutions and networking opportunities.
-                            However, it is important to carefully research and plan for a study abroad experience to
-                            ensure a successful and safe journey. Factors to consider include the destination country's
-                            culture, language, safety, and visa requirements, as well as the academic program and cost.
-                            With proper preparation and an open mind, studying abroad can be an incredibly rewarding
-                            adventure that broadens one's horizons and enriches one's life.</p>
+                        <p>Certainly! A work visa is a type of visa that allows individuals to legally work in a foreign
+                            country. The specific requirements and procedures for obtaining a work visa vary depending
+                            on the country you're interested in. Generally, you need a valid job offer from an employer
+                            in the host country to apply for a work visa..</p>
+                            <p></p>
                         <h2 class="mb-4">About Work Visa.</h2>
                         <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/work visa.jpg" alt="Image">
                         <p>Work visas are permits that allow individuals to travel to another country to work there.
