--- a/about.html
+++ b/about.html
@@ -271,7 +271,7 @@
         <div class="container py-5">
             <div class="text-center mb-5">
                 <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">Testimonial</h5>
-                <h1>What Say Our Students</h1>
+                <h1>What Our Customer Say About Us</h1>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-8">
