--- a/about.html
+++ b/about.html
@@ -283,7 +283,7 @@
                                 say u can believe and go forward with Hykin overseas</h4>
                             <img class="img-fluid mx-auto mb-3" src="img/testimonial-1.png" alt="">
                             <h5 class="m-0">Satish Babu</h5>
-                            <span>Profession</span>
+                            <span>Traveler</span>
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
@@ -291,7 +291,7 @@
                                 visa within 10 days.m</h4>
                             <img class="img-fluid mx-auto mb-3" src="img/testimonial-2.png" alt="">
                             <h5 class="m-0">Gariganti Suresh</h5>
-                            <span>Profession</span>
+                            <span>student</span>
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
@@ -300,7 +300,7 @@
                                 really excellent.</h4>
                             <img class="img-fluid mx-auto mb-3" src="img/testimonial-3.png" alt="">
                             <h5 class="m-0">siva krishna ummadi</h5>
-                            <span>Profession</span>
+                            <span>Student</span>
                         </div>
                     </div>
                 </div>
